--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkhub",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "linkhub auth modules for www.linkhub.co.kr",
   "author": "Kim Seongjun <pallet027@gmail.com>",
   "contributors": [{
@@ -22,6 +22,9 @@
     "linkhub",
     "sdk"
   ],
+  "dependencies": {
+    "sync-request": "^2.0.0"
+  },
   "preferGlobal": true,
   "subdomain": "linkhub",
   "license": "MIT"
