--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "linkhub",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "linkhub auth modules for www.linkhub.co.kr",
   "author": "Kim Seongjun <pallet027@gmail.com>",
-  "contributors": [{
-    "name": "Kim Seongjun",
-    "email": "pallet027@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "Kim Seongjun",
+      "email": "pallet027@gmail.com"
+    }
+  ],
   "main": "index.js",
   "engines": {
     "node": ">= 0.10.0"
@@ -23,7 +25,7 @@
     "sdk"
   ],
   "dependencies": {
-    "sync-request": "^2.0.0"
+    "then-request": "^6.0.2"
   },
   "preferGlobal": true,
   "subdomain": "linkhub",
