--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkhub",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "linkhub auth modules for www.linkhub.co.kr",
   "author": "Kim Seongjun <pallet027@gmail.com>",
   "contributors": [
@@ -25,7 +25,7 @@
     "sdk"
   ],
   "dependencies": {
-    "then-request": "^6.0.2"
+    "sync-request": "^2.0.0"
   },
   "preferGlobal": true,
   "subdomain": "linkhub",
