--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkhub",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "description": "linkhub auth modules for www.linkhub.co.kr",
   "author": "Kim Seongjun <pallet027@gmail.com>",
   "contributors": [
@@ -29,7 +29,7 @@
     "sdk"
   ],
   "dependencies": {
-    "sync-request": "^2.0.0"
+    "xmlhttprequest": "^1.8.0"
   },
   "preferGlobal": true,
   "subdomain": "linkhub",
